--- a/src/assets/styles/_base.sass
+++ b/src/assets/styles/_base.sass
@@ -11,6 +11,15 @@ $element-space: 8px
 $element-padding: 12px
 $element-border-radius: 6px
 
+$container-margin-width: 5px
+$scrollbar-thumb-color: #cccccc
+
 @mixin focus-outline($color: $default-color)
   outline: 2px solid rgba($color, 0.5)
   outline-offset: 2px
+
+@mixin basic-element-styles
+  padding: $element-padding
+  font-family: inherit
+  font-size: inherit
+  border-radius: $element-border-radius
