Fix select element border is undefined

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -33,6 +33,8 @@ div.container
 
 select
   @include base.basic-element-styles
+  border: 1px solid base.$default-color
+  background: none
 
   &:focus
     @include base.focus-outline($color: base.$primary-color)
