Refactor navbar-height

--- a/src/assets/styles/navbar.sass
+++ b/src/assets/styles/navbar.sass
@@ -1,10 +1,12 @@
 @use 'base'
 
+$navbar-height: 52px
+
 nav
   padding: 10px 50px 0px 50px
   background-color: base.$primary-color
   overflow: hidden
-  height: 42px
+  height: $navbar-height
   display: flex
   align-items: flex-end
 
