--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -3,6 +3,9 @@
 @use 'button'
 @use 'textbox'
 
+*
+  box-sizing: border-box
+
 html, body
   margin: 0
   font-size: 12pt
@@ -16,13 +19,10 @@ html, body
   margin: 0
   padding: 0
 
-.view-container
-  $navbar-height: 52px
-  $container-padding-topbottom: 50px
-  height: calc(100vh - $navbar-height - 2*$container-padding-topbottom)
-  padding-top: $container-padding-topbottom
-  padding-bottom: $container-padding-topbottom
-  overflow-y: scroll
+.container
+  height: calc(100vh - navbar.$navbar-height)
+  padding: 1.5rem
+  overflow-y: auto
 
 select
   @include base.basic-element-styles
