--- a/src/assets/styles/UploadView.css
+++ b/src/assets/styles/UploadView.css
@@ -1,36 +1,38 @@
+/* Base Styles */
 .upload-view {
+  display: grid;
+  grid-template-rows: 100px 1fr 100px;
+  grid-template-columns: 1fr 3fr 1fr;
+  height: 92vh;
+}
+
+.logo-header,
+.footer {
+  grid-column: 1 / -1;
+  height: 100px;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  height: 100vh;
-  padding: 20px;
-  box-sizing: border-box;
+  align-items: center;
 }
 
 .logo-header {
-  display: flex;
-  align-items: center;
   justify-content: flex-start;
-  margin-bottom: 20px;
-  margin-left: 100px;
+  padding-left: 250px;
 }
 
-.fa-icon {
-  font-size: 50px;
-  margin-right: 20px;
+.footer {
+  padding: 10px 0;
 }
 
 .content {
-  width: 100%;
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  min-height: 460px;
 }
 
 .drop-area {
-  width: 800px;
-  margin: 0 auto;
-  height: 500px;
+  min-height: 300px;
+  width: 100%;
   border: 2px dashed #ccc;
   border-radius: 10px;
   padding: 20px;
@@ -38,15 +40,20 @@
   cursor: pointer;
 }
 
-.drop-message-text {
-  font-size: 16px;
-  margin-bottom: 10px;
+/* Typography */
+.fa-icon {
+  font-size: 50px;
+  margin-right: 20px;
 }
 
 .bold-text {
   font-weight: bold;
-  color: black;
   font-size: 25px;
+}
+
+.drop-message-text {
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 
 .gray-text,
@@ -89,6 +96,7 @@
   margin-right: -50px;
 }
 
+/* Buttons */
 .primary {
   background-color: #007bff;
   color: white;
@@ -98,6 +106,26 @@
   cursor: pointer;
   font-weight: bold;
 }
+
 .p-margin {
   margin-top: 35px;
+}
+
+/* Media Queries */
+@media (max-height: 600px) {
+  .drop-area {
+    min-height: 200px;
+  }
+}
+
+@media (max-width: 768px) {
+  .logo-header {
+    padding-left: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo-header {
+    padding-left: 10px;
+  }
 }
