--- a/src/assets/styles/UploadView.scss
+++ b/src/assets/styles/UploadView.scss
@@ -178,7 +178,7 @@ h1 {
   grid-template-rows: minmax(80px, auto) 1fr minmax(80px, auto);
   grid-template-columns: minmax(0, 2fr) minmax(440px, 6fr) minmax(0, 2fr);
   height: calc(100vh - 42px);
-  background-color: aliceblue;
+  // background-color: aliceblue;
   overflow-y: auto;
   overflow-x: hidden;
 }
