--- a/src/assets/styles/UploadView.scss
+++ b/src/assets/styles/UploadView.scss
@@ -116,7 +116,7 @@ h1 {
   display: flex;
   flex-direction: column;
   flex: 1; /* ครอบพื้นที่ทั้งหมดใน col-6.bg-info */
-  background-color: aliceblue;
+  // background-color: aliceblue;
   border: 2px dashed #ccc;
   border-radius: 10px;
   padding: 20px;
