Update base styles

--- a/src/assets/styles/_base.sass
+++ b/src/assets/styles/_base.sass
@@ -1,7 +1,7 @@
 $disabled-color: rgba(white, 0.5)
 $shadow-color: #000000
 
-$default-color: #aaaaaa
+$default-color: #98b0ab
 $primary-color: #62aa92
 $secondary-color: #7869b1
 $default-font-color: #2c3e50
