--- a/src/assets/styles/button.sass
+++ b/src/assets/styles/button.sass
@@ -38,6 +38,7 @@ input[type="button"], input[type="submit"], button
     &:hover
       background: base.$default-color
       color: base.$invert-font-color
+      border: 1px solid base.$invert-font-color
       box-shadow: 0 2em 8px -2em rgba(base.$shadow-color, 0.2) inset
 
     &:active
