Change styles, Refactor

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -46,3 +46,15 @@ select
 ::-webkit-scrollbar-thumb
   background: rgba(base.$scrollbar-thumb-color, 0.8)
   border-radius: 6px
+
+img
+  user-drag: none
+  -webkit-user-drag: none
+  user-select: none
+  -moz-user-select: none
+  -webkit-user-select: none
+  -ms-user-select: none
+
+hr
+  border: none
+  border-top: 1px solid lighten(base.$default-color, 20%)
